tests/macro-tests/cases/property/return_type_is_not_ui_node.stderr
error[E0277]: the trait bound `NotUiNode: zng::prelude::UiNode` is not satisfied
 --> cases/property/return_type_is_not_ui_node.rs:6:75
  |
5 | #[property(CONTEXT)]
  | -------------------- required by a bound introduced by this call
6 | pub fn invalid_output(_child: impl IntoUiNode, _input: impl IntoVar<bool>) -> NotUiNode {
  |                                                                           ^^^^^^^^^ the trait `zng::prelude::UiNode` is not implemented for `NotUiNode`
  |
  = note: you can use `match_node` to declare a node from a closure
  = note: you can use `#[ui_node]` to implement `UiNode` for `NotUiNode`
  = help: the following other types implement trait `zng::prelude::UiNode`:
            <implementers-list>
