tests/macro-tests/cases/property/return_type_is_not_ui_node.rs
use zng::prelude_wgt::{property, IntoVar, UiNode};

pub struct NotUiNode;

#[property(CONTEXT)]
pub fn invalid_output(_child: impl IntoUiNode, _input: impl IntoVar<bool>) -> NotUiNode {
    NotUiNode
}

fn main() {}
